--- a/Pages/Images.cshtml
+++ b/Pages/Images.cshtml
@@ -3,21 +3,30 @@
 @{
     ViewData["Title"] = "Images Viewer";
 
-    string rootPath = "W:\\Lab\\ImageViewer\\root-folder";
-    var files = System.IO.Directory.GetFiles(rootPath+"\\0a1b528c-d712-44b3-be8a-e3d42c582088");
+    string wwwRootPath = "W:\\Lab\\ImageViewer\\wwwroot";
+    var files = System.IO.Directory.GetFiles(wwwRootPath + "\\root-folder\\0a1b528c-d712-44b3-be8a-e3d42c582088");
 
     var fileNames = files.Select(path => {
         System.IO.FileInfo dir_info = new System.IO.FileInfo(path);
         return dir_info.Name;
         }).ToArray();
+
+    var fileUrls = files.Select(path => path.Replace(wwwRootPath, "")).ToArray();
 }
 
 <div class="text-center">
     <h1 class="display-4">Images Viewer</h1>
     <ul>
-        @foreach (string name in fileNames) 
+        @for (int i = 0; i < fileNames.Length; i++)
         {
-            <li>🖼@name</li>
+            <li>🖼<a class="js-image" data-href=@fileUrls[i]>@fileNames[i]</a></li>
         }
     </ul>
+    <div class="img-container">
+        <div class="img-wrapper">
+            <img src="" alt="" class="js-selected-image">
+        </div>
+    </div>
+    <a class="js-initial-state">Initial State</a>
+    <a class="js-download" download>Download</a>
 </div>
