Display 'Loading' while image is loading

--- a/Pages/Images.cshtml
+++ b/Pages/Images.cshtml
@@ -34,6 +34,7 @@
     <div class="img-container">
         <div class="img-wrapper">
             <img src="" alt="" class="js-selected-image">
+            <span>Loading...<span>
         </div>
     </div>
     <a class="js-initial-state">Initial State</a>
