--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,7 +15,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Folders Viewer</h1>
+    <h1 class="display-4">Folder Viewer</h1>
     <ul>
         @foreach (string name in folders) 
         {
