--- a/Pages/Images.cshtml
+++ b/Pages/Images.cshtml
@@ -14,8 +14,13 @@
         }).ToArray();
 
     var fileSizes = files.Select(path => {
-        var img = System.Drawing.Bitmap.FromFile(path);
-        return new Tuple<int, int>(img.Width, img.Height);
+        try {
+            var img = System.Drawing.Bitmap.FromFile(path);
+            return new Tuple<int, int>(img.Width, img.Height);
+        }
+        catch(Exception e) {
+            return new Tuple<int, int>(-1, -1);
+        }
         }).ToArray();
 
     var fileUrls = files.Select(path => path.Replace(wwwRootPath, "")).ToArray();
@@ -27,7 +32,14 @@
         @for (int i = 0; i < fileNames.Length; i++)
         {
             <li>
-                🖼<a class="js-image" data-href=@fileUrls[i] data-width=@fileSizes[i].Item1 data-height=@fileSizes[i].Item2>@fileNames[i] (@fileSizes[i].Item1 x @fileSizes[i].Item2)</a>
+                🖼<a class="js-image" 
+                    data-href=@fileUrls[i] 
+                    data-width=@fileSizes[i].Item1 
+                    data-height=@fileSizes[i].Item2>@fileNames[i] 
+                    @if (fileSizes[i].Item1 > 0) {
+                        <span>(@fileSizes[i].Item1 x @fileSizes[i].Item2)</span>
+                    }
+                </a>
             </li>
         }
     </ul>
